--- a/Views/Useful.html
+++ b/Views/Useful.html
@@ -15,7 +15,7 @@
 				<ul class="uk-list uk-list-striped">
 					<li>
 						<a target="_blank" href={{link}}>{{desp}}</a> 
-						<a uk-icon="icon: minus-circle" uk-tooltip="title: Remove; pos: right; animation: uk-animation-fade" onclick="removeLink({{id}})"></a>
+						<a style="float:right;" uk-icon="icon: minus-circle" uk-tooltip="title: Remove; pos: right; animation: uk-animation-fade" onclick="removeLink({{id}})"></a>
 					</li>			
 				</ul>				
 			</div>
